discovery flow complete . need to test